[gd_scene load_steps=3 format=3 uid="uid://pd4v0jbdpqqo"]

[ext_resource type="Script" uid="uid://em2fekl67m26" path="res://scenes/UI/options_menu.gd" id="1_qgort"]
[ext_resource type="PackedScene" uid="uid://w753p57f1x5c" path="res://scenes/component/sound_button.tscn" id="3_fg4yy"]

[node name="OptionsMenu" type="Node"]
process_mode = 3
script = ExtResource("1_qgort")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/Panel/MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 24

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 32
text = "Options"
horizontal_alignment = 1
vertical_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="MasterOptionContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/MasterOptionContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/MasterOptionContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="SFXOptionContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/SFXOptionContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/SFXOptionContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="MusicOptionContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/MusicOptionContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/MusicOptionContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="WindowModeContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/WindowModeContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = "Window Mode"

[node name="WindowButton" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/WindowModeContainer" instance=ExtResource("3_fg4yy")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="BackButton" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer" instance=ExtResource("3_fg4yy")]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Back"
